<resources>
    <string name="app_name">Askdog</string>
    <string name="main_tab_name_home">首页</string>
    <string name="main_tab_name_hot">热门</string>
    <string name="main_tab_name_recommend">推荐</string>
    <string name="main_tab_name_me">个人</string>
    <string name="main_tab_name_add">分享</string>
    <string name="search_hint">搜索经验</string>
    <string name="tip_double_click_exit">再次点击退出Askdog</string>
    <string name="activity_channel_home_title">频道主页</string>
    <string name="activity_create_channel_title">编辑频道</string>
    <string name="activity_my_own_channel_title">我的频道</string>
    <string name="activity_subscribed_channel_title">订阅频道</string>
    <string name="activity_my_view_history_title">浏览历史</string>
    <string name="activity_personal_channel_title">订阅的频道</string>
    <string name="activity_share_word_title">经验分享</string>
    <string name="channel_release_success">发布成功</string>
    <string name="fragment_my_title">个人中心</string>
    <string name="channel_release_btn">发布</string>
    <string name="next_step_label">下一步</string>
    <string name="please_input_title">请输入标题</string>
    <string name="please_input_content">请输入正文</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="common_exit">press again to exit the system</string>
    <string name="common_network_unavailable">currently netwok not available</string>
    <string name="common_network_error">network problem, please try again later</string>
    <string name="common_request_error">get data is error, please try it</string>
    <string name="dialog_loading">加载中...</string>
    <string name="version_name">版本号:</string>
    <string name="ask_dog_copyright">Coypright © 2016 大连鸿影科技有限公司</string>
    <string name="register_ok_notice">激活链接已发送至</string>
    <!-- login -->
    <string name="login_title">账户登录</string>
    <string name="login_name">账号</string>
    <string name="login_password">密码</string>
    <string name="mail_hint">请输入邮箱地址</string>
    <string name="input_passward">请输入登陆密码</string>
    <string name="login">登&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="regist_rightnow">没有账号?请注册</string>
    <string name="no_passward_login">无密码登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_register_name">姓名</string>
    <string name="login_register_name_hint">中文/英文昵称</string>
    <string name="login_send_mail">发送邮件</string>
    <string name="forget_mail_err">手机或邮箱地址的格式不正确</string>
    <string name="register">注册</string>
    <string name="result_text_one">邮件发送成功!</string>
    <string name="result_text_two">重置密码的邮件已经发送到你的邮箱</string>
    <string name="reset_text">重置</string>
    <string name="reset_new_password_text">新密码</string>
    <string name="reset_re_password_text">确认密码</string>
    <string name="reset_password_not_match">两次输入密码不一致</string>
    <string name="subscribe_goto">跳过</string>
    <string name="subscribe_text">订阅</string>
    <string name="reset_old_password_text">原密码</string>
    <string name="input_old_passward">请输入原密码</string>
    <string name="input_new_passward">请输入新密码</string>
    <string name="input_reset_passward">确认密码</string>
    <string name="videoshare_title_hint">视频分享</string>
    <string name="detail_subscribe_on">订阅频道</string>
    <string name="detail_subscribe_off">取消订阅</string>
    <string name="dialog_string_camera">拍照上传</string>
    <string name="dialog_string_album">从相册中选择</string>
    <string name="alert_dialog_ok">确认</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="alert_delete_channel">删除频道</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="videoshare_text">视频分享</string>
    <string name="wordshare_text">图文分享</string>
    <string name="cancel_text">取消</string>
    <string name="videoshare_edit_hint">请输入标题</string>
    <string name="videoshare_price_edit_hint">请输入价格</string>
    <string name="dialog_string_video">录制视频</string>


    <string name="empty_message">啥也没有</string>
    <string name="loading_message">请等一等啦ლ(╹◡╹ლ)</string>
    <string name="error_message">哎呀！发生了一些错误</string>

    <string name="empty_button">重试</string>
    <string name="loading_button">取消</string>
    <string name="error_button">重试</string>

    <string name="highlight_text"><font color="#3688e5">%s</font></string>

    ///////
    <string name="sm_item_auth">ShareSDK授权demo</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="close_info_dialog">关闭信息界面</string>
    <string name="login_to_format">登陆到%s</string>
    <string name="remove_to_format">注销%s登录</string>
    <string name="remove_to_format_success">成功移除%s登录信息</string>

    <string name="register_key_user_icon">头像:</string>
    <string name="register_key_user_name">昵称:</string>
    <string name="register_key_user_gender">性别:</string>
    <string name="register_key_user_UID">U I D:</string>
    <string name="register_key_user_mail">邮箱:</string>
    <string name="register_key_user_password">密码:</string>

    <string name="register_user_info">用户信息</string>
    <string name="register_up">注册</string>
    <string name="register_girl">女</string>
    <string name="register_boy">男</string>
    <string name="register_UserID">UserID不能修改</string>
    <string name="tpl_no_sdcard">sdcard 卡不存在</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>

    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>

    <string name="cicle_friend">朋友圈</string>
    <string name="weixin">微信好友</string>
    <string name="qzone">QQ空间</string>
    <string name="qq_friend">QQ好友     </string>
    <string name="short_message">短信</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="wxpay_success">支付成功</string>
    <string name="wxpay_failed">支付失败</string>
</resources>
