<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.setting.ResetPasswordActivity">

    <include layout="@layout/common_header_navi"></include>

    <android.support.v7.widget.CardView
        cardCornerRadius="@dimen/common_margin3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/login_text_width"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/reset_old_password_text" />

                <EditText
                    android:id="@+id/reset_pwd_old"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center_vertical|right"
                    android:hint="@string/input_old_passward"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color_hint_login"
                    android:textSize="@dimen/common_textsize_type16" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/login_text_width"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/reset_new_password_text" />

                <EditText
                    android:id="@+id/reset_pwd_new"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center_vertical|right"
                    android:hint="@string/input_new_passward"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color_hint_login"
                    android:textSize="@dimen/common_textsize_type16" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/login_text_width"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/input_reset_passward" />

                <EditText
                    android:id="@+id/reset_pwd_confirm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:gravity="center_vertical|right"
                    android:hint="@string/input_new_passward"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color_hint_login"
                    android:textSize="@dimen/common_textsize_type16" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/reset_pwd_differ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin3"
        android:padding="@dimen/common_margin5"
        android:text="输入的密码不一致,请重新确认"
        android:textColor="@color/red"
        android:textSize="@dimen/common_textsize_type12"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setting_reset_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/blue_bg_btn"
            android:gravity="center"
            android:text="@string/reset_text"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/common_textsize_type20" />
    </LinearLayout>

</LinearLayout>