<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.login.RegisterActivity">


    <include layout="@layout/bar_login"></include>


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/common_margin20"
        android:src="@drawable/ic_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/black"
                style="@style/about_edit_text"
                android:layout_gravity="center_vertical"
                android:text="@string/login_register_name" />

            <EditText
                android:id="@+id/register_register_name_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/login_register_name_hint"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color_hint_login"
                android:textSize="@dimen/common_textsize_type16" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#E6E6E6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/black"
                style="@style/about_edit_text"
                android:layout_gravity="center_vertical"
                android:text="邮箱" />

            <EditText
                android:id="@+id/register_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/mail_hint"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color_hint_login"
                android:textSize="@dimen/common_textsize_type16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#E6E6E6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/black"
                style="@style/about_edit_text"
                android:layout_gravity="center_vertical"
                android:text="@string/login_password" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:hint="@string/input_passward"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColorHint="@color/text_color_hint_login"
                android:textSize="@dimen/common_textsize_type16" />

            <ImageView
                android:id="@+id/password_clear_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_login_clear" />

            <ImageView
                android:id="@+id/password_show_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_login_show_password" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#E6E6E6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:text="同意并接受" />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:text="《Askdog 用户协议》" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/blue_bg_btn"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/common_textsize_type18" />
    </LinearLayout>

    <TextView
        android:id="@+id/usePhoneRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="使用手机号注册" />

    <!--以此为分界线-->

    <!--外层平行关系的水平布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">
        <!--左边栏-->
    </LinearLayout>


</LinearLayout>