<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context="com.askdog.android.activity.share.ShareMessageActivity">

    <LinearLayout android:id="@+id/share_message_cancel_ll"
        android:layout_width="@dimen/common_margin50"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/common_margin10"
        android:layout_marginLeft="@dimen/common_margin10"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/share_message_cancel"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/delete" />
    </LinearLayout>

    <TextView
        android:id="@+id/share_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/share_message_cancel_ll"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="分享"
        android:textColor="@color/blue"
        android:textSize="@dimen/common_textsize_type26" />

    <LinearLayout
        android:id="@+id/LinearLayout_allShareButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin10"
        android:padding="@dimen/common_margin5"
        android:layout_below="@+id/share_message_title">


        <LinearLayout
            android:id="@+id/linearLayout_ciclefriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="13.3dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_ciclefriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_friends_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/cicle_friend"
                android:textColor="@color/text_color_selector"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="13.3dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wxin_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/weixin"
                android:textColor="@color/text_color_selector"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout_qzone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="13.3dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_qzone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qqzone_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/qzone"
                android:textColor="@color/text_color_selector"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/LinearLayout_sinaweibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13.3dp"

            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageView_sinaweibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sina_weibo_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sina_weibo"
                android:textColor="@color/text_color_selector"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
